--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
     display: none;
 }
 .logo{
-    width:100px;
+    width:150px;
 }
 .search{
     background:#001f58;
@@ -15,10 +15,12 @@
     border: none;
     outline: none;
     border-radius: 5px;
+    padding: 7px;
 }
 .hover-underline-banner>img{
     width: 100%;
-    height: 500px;
+    height: 761px;
+    object-fit: contain;
 }
 .instant_services{
     text-decoration: none;
@@ -26,6 +28,7 @@
     font-size: 20px;
     font-weight: bold;
     margin-top: -4px;
+    margin-left: 70px;
 }
 .modal-container {
   display: block;
@@ -42,7 +45,6 @@
   background-color: #fefefe;
   margin: 10% auto;
   padding: 20px;
-  border: 1px solid #888;
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
@@ -64,7 +66,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .owl-dots{
     display: none;
@@ -86,10 +88,20 @@
 .or{
     text-align: center;
     margin-top: 35px;
-    font-size: 25px;
+    font-size: 20px;
+}
+.pref{
+    text-align: center;
+    margin-top: 5px;
 }
 .span{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
     text-decoration: underline;
+}
+.btns{
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    height: 40px;
 }
